--- a/src/routes/Todos/todo.style.css
+++ b/src/routes/Todos/todo.style.css
@@ -16,6 +16,32 @@
     position: absolute;
     overflow-y: scroll;
 
+    .todo-overview {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 1em 0 2em 0;
+
+      .todo-count {
+        display: flex;
+        justify-content: center;
+        align-items: baseline;
+        gap: 1em;
+
+        .count {
+          background-color: lightgray;
+          padding: 0 0.3em;
+          border-radius: 5px;
+          border: 2px solid #6b3d81;
+          min-width: 35px;
+          height: auto;
+          text-align: center;
+          font-weight: 500;
+          font-size: 1.25em;
+        }
+      }
+    }
+
     .todos-container {
       overflow: hidden;
       display: flex;
@@ -24,11 +50,11 @@
     }
 
     .todo-add-button-container {
-      position: fixed;
+      /*     position: fixed;
       bottom: 3em;
       right: 10%;
       transform: translateX(-10%);
-      z-index: 50;
+      z-index: 50; */
     }
   }
 }
