--- a/src/components/Cards/TodoCard/todocard.style.css
+++ b/src/components/Cards/TodoCard/todocard.style.css
@@ -5,10 +5,10 @@
   color: black;
 
   background: rgba(255, 255, 255, 0.6);
-  box-shadow: 0 8px 16px 0 rgba(31, 38, 135, 0.37);
+  box-shadow: 0 8px 16px 0 rgba(31, 38, 135, 0.242);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
+  border-radius: 1em;
   border: 1px solid rgba(255, 255, 255, 0.18);
   gap: 1em;
 
