--- a/src/components/Navbar/Date/date.style.css
+++ b/src/components/Navbar/Date/date.style.css
@@ -1,3 +1,12 @@
-.date-display {
-  font-size: 1em;
+.date-component {
+  display: none;
+  .date-display {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (min-width: 650px) {
+  .date-component {
+    display: block;
+  }
 }
