--- a/src/routes/Todos/todo.style.css
+++ b/src/routes/Todos/todo.style.css
@@ -1,7 +1,17 @@
-.todo-route-background {
-  background-color: #ece4f2;
-  height: 100vh;
+.todo-route-background::before {
+  content: "";
+  background: url("./../../assets/flower-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  opacity: 0.25; /* Set the opacity to 50% */
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .todo-route {
@@ -47,14 +57,6 @@
       display: flex;
       flex-direction: column-reverse;
       gap: 1em;
-    }
-
-    .todo-add-button-container {
-      /*     position: fixed;
-      bottom: 3em;
-      right: 10%;
-      transform: translateX(-10%);
-      z-index: 50; */
     }
   }
 }
